Add colored cement buckets